--- a/styele.css
+++ b/styele.css
@@ -268,6 +268,7 @@ li{
         width: 100%;
         border: none;
         border-bottom: 1px solid;
+        background-color: transparent;
     }
     .content-social{
         display: none;
