--- a/styele.css
+++ b/styele.css
@@ -13,6 +13,7 @@ html {
 
 body {
   background: #fff;
+  margin: 0.5rem 0.5rem;
 }
 
 header {
@@ -71,6 +72,7 @@ a{
     height: 100%;
 }
 .navbar-brand img{
+    width: 100%;
     max-height: 100%;
     max-width: 200px;
     padding: 10px 10px;
@@ -358,8 +360,6 @@ li{
     .cards{
         display: grid;
         justify-content: stretch;
-        padding-left: 15px;
-        padding-right: 15px;
     }
     .cards li{
         width: 100%;
