--- a/styele.css
+++ b/styele.css
@@ -324,6 +324,7 @@ li{
     margin-top: 4rem;
     flex-direction: column;
     gap: 1rem;
+    align-items: center;
 }
 .serviços-title{
     display: flex;
@@ -456,6 +457,12 @@ li{
     .plano-vivanete{
         max-width: 900px;
     }
+    .serviços{
+        max-width: 900px;
+    }
+    .service_card h2{
+        font-size: 18px;
+    }
 }
 
 @media (max-width: 900px){
@@ -540,6 +547,24 @@ li{
     }
     .ver-mais{
         display: none;
+    }
+    .serviços{
+        max-width: 660px;
+    }
+    .service_card h2{
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 660px){
+    .service_content_card{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .service_card{
+        max-width: 300px;
+    }
+    .service_card h2{
+        font-size: 18px;
     }
 }
 /*----------Medias Queries----------*/
